--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -4,6 +4,7 @@ footer {
   border: none;
   h4 {
     font-size: 12px;
+    margin-bottom: 7px;
 
   }
   #content {
